{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 62,
  "lineage": "f1678b31-18f4-e604-63dc-53c7ec6e94cc",
  "resources": [
    {
      "module": "module.ap-northeast-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion2_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02a405b3302affc24",
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:instance/i-03fe63f51489d81a5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session_manager",
            "id": "i-03fe63f51489d81a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key_tokyo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0452087cf923f95bb",
            "private_dns": "ip-11-0-1-243.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.243",
            "public_dns": "ec2-54-199-239-50.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.199.239.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-042f0b5b7d5de64f1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00ac3ade5d11ed348"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052ee3689b646d21b",
            "tags": {
              "Name": "Bastion_2_tokyo_public"
            },
            "tags_all": {
              "Name": "Bastion_2_tokyo_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac3ade5d11ed348"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session_manager",
            "aws_iam_role.session_manager",
            "data.aws_iam_policy_document.ec2",
            "module.ap-northeast-1.aws_security_group.ec2_security_group_tokyo",
            "module.ap-northeast-1.module.keypair.aws_key_pair.generated_key_tokyo",
            "module.ap-northeast-1.module.keypair.tls_private_key.ec2key_tokyo",
            "module.ap-northeast-1.module.vpc.aws_subnet.public_subnet_1_vpc_tokyo",
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ap-northeast-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02a405b3302affc24",
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:instance/i-0535058ec6c9060d8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session_manager",
            "id": "i-0535058ec6c9060d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key_tokyo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c7f66f1f294daa3",
            "private_dns": "ip-11-0-3-232.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.3.232",
            "public_dns": "ec2-43-207-121-17.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "43.207.121.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c67b40d76caff54",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00ac3ade5d11ed348"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0982f0bbe9059a248",
            "tags": {
              "Name": "webserver_2_private"
            },
            "tags_all": {
              "Name": "webserver_2_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ac3ade5d11ed348"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session_manager",
            "aws_iam_role.session_manager",
            "data.aws_iam_policy_document.ec2",
            "module.ap-northeast-1.aws_security_group.ec2_security_group_tokyo",
            "module.ap-northeast-1.module.keypair.aws_key_pair.generated_key_tokyo",
            "module.ap-northeast-1.module.keypair.tls_private_key.ec2key_tokyo",
            "module.ap-northeast-1.module.vpc.aws_subnet.private_subnet_1_vcp_2",
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ap-northeast-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:security-group/sg-00ac3ade5d11ed348",
            "description": "Allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ac3ade5d11ed348",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "159184128979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group"
            },
            "tags_all": {
              "Name": "ec2_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c62c8ff9bcdf9ad1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:internet-gateway/igw-06c0cfb1201d79d7f",
            "id": "igw-06c0cfb1201d79d7f",
            "owner_id": "159184128979",
            "tags": {
              "Name": "igw_vpc_tokyo"
            },
            "tags_all": {
              "Name": "igw_vpc_tokyo"
            },
            "vpc_id": "vpc-0c62c8ff9bcdf9ad1"
          },
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ]
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private_subnet_vpc_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:route-table/rtb-0e90ca7f6311cbf35",
            "id": "rtb-0e90ca7f6311cbf35",
            "owner_id": "159184128979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_private_subnet_vpc_tokyo"
            },
            "tags_all": {
              "Name": "route_private_subnet_vpc_tokyo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c62c8ff9bcdf9ad1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ]
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public_subnet_vpc_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:route-table/rtb-0fd1e6f9e5e339a59",
            "id": "rtb-0fd1e6f9e5e339a59",
            "owner_id": "159184128979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c0cfb1201d79d7f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_public_subnet_vpc_tokyo"
            },
            "tags_all": {
              "Name": "route_public_subnet_vpc_tokyo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c62c8ff9bcdf9ad1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_internet_gateway.igw_vpc_tokyo",
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ]
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_1_association_vpc_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca17ca02865d2477",
            "route_table_id": "rtb-0e90ca7f6311cbf35",
            "subnet_id": "subnet-0982f0bbe9059a248"
          },
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_route_table.route_private_subnet_vpc_tokyo",
            "module.ap-northeast-1.module.vpc.aws_subnet.private_subnet_1_vcp_2",
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ]
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_1_association_vpc_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6f41720ac6809b",
            "route_table_id": "rtb-0fd1e6f9e5e339a59",
            "subnet_id": "subnet-052ee3689b646d21b"
          },
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_internet_gateway.igw_vpc_tokyo",
            "module.ap-northeast-1.module.vpc.aws_route_table.route_public_subnet_vpc_tokyo",
            "module.ap-northeast-1.module.vpc.aws_subnet.public_subnet_1_vpc_tokyo",
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ]
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1_vcp_2",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:subnet/subnet-0982f0bbe9059a248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0982f0bbe9059a248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1_vpc_tokyo"
            },
            "tags_all": {
              "Name": "private_subnet_1_vpc_tokyo"
            },
            "vpc_id": "vpc-0c62c8ff9bcdf9ad1"
          },
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1_vpc_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:subnet/subnet-052ee3689b646d21b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052ee3689b646d21b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1_vpc_tokyo"
            },
            "tags_all": {
              "Name": "public_subnet_1_vpc_tokyo"
            },
            "vpc_id": "vpc-0c62c8ff9bcdf9ad1"
          },
          "dependencies": [
            "module.ap-northeast-1.module.vpc.aws_vpc.vpc_tokyo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ap-northeast-1.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tokyo",
      "provider": "module.ap-northeast-1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:159184128979:vpc/vpc-0c62c8ff9bcdf9ad1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-05e1f976ba49566ee",
            "default_route_table_id": "rtb-000814d37968c05af",
            "default_security_group_id": "sg-0d1f94d0a29d85a96",
            "dhcp_options_id": "dopt-0ca4663de072b8e15",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c62c8ff9bcdf9ad1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000814d37968c05af",
            "owner_id": "159184128979",
            "tags": {
              "Name": "vpc_tokyo"
            },
            "tags_all": {
              "Name": "vpc_tokyo"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cd4de4363ab6ee8",
            "arn": "arn:aws:ec2:us-west-2:159184128979:instance/i-0bb97832d23d8638e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session_manager",
            "id": "i-0bb97832d23d8638e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc1e95a33545bab4",
            "private_dns": "ip-10-0-1-149.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-54-185-189-65.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.189.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-006765209f20af332",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-016a16309f3bccd4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e16b54c9c89f01f0",
            "tags": {
              "Name": "Bastion_1_public"
            },
            "tags_all": {
              "Name": "Bastion_1_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016a16309f3bccd4c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session_manager",
            "aws_iam_role.session_manager",
            "data.aws_iam_policy_document.ec2",
            "module.us-west-2.aws_security_group.ec2_security_group",
            "module.us-west-2.module.keypair.aws_key_pair.generated_key",
            "module.us-west-2.module.keypair.tls_private_key.ec2key",
            "module.us-west-2.module.vpc.aws_subnet.public_sebnet_1_vpc_1",
            "module.us-west-2.module.vpc.aws_subnet.public_subnet_2_vpc_1",
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cd4de4363ab6ee8",
            "arn": "arn:aws:ec2:us-west-2:159184128979:instance/i-071ea0021f0eea461",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session_manager",
            "id": "i-071ea0021f0eea461",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d3983adc776a817f",
            "private_dns": "ip-10-0-2-192.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.192",
            "public_dns": "ec2-34-222-11-166.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.11.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0231062f3abba172d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-016a16309f3bccd4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04219823be4578d26",
            "tags": {
              "Name": "Bastion_2_public"
            },
            "tags_all": {
              "Name": "Bastion_2_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016a16309f3bccd4c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session_manager",
            "aws_iam_role.session_manager",
            "data.aws_iam_policy_document.ec2",
            "module.us-west-2.aws_security_group.ec2_security_group",
            "module.us-west-2.module.keypair.aws_key_pair.generated_key",
            "module.us-west-2.module.keypair.tls_private_key.ec2key",
            "module.us-west-2.module.vpc.aws_subnet.public_sebnet_1_vpc_1",
            "module.us-west-2.module.vpc.aws_subnet.public_subnet_2_vpc_1",
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cd4de4363ab6ee8",
            "arn": "arn:aws:ec2:us-west-2:159184128979:instance/i-09cfd479fe17fcd10",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session_manager",
            "id": "i-09cfd479fe17fcd10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ce7472ad989c0c85",
            "private_dns": "ip-10-1-1-12.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.12",
            "public_dns": "ec2-35-87-6-117.us-west-2.compute.amazonaws.com",
            "public_ip": "35.87.6.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb808a7d6434c93e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b922a2fb472e441f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07eccd7e52b74aac3",
            "tags": {
              "Name": "Bastion_2_public_vpc_2"
            },
            "tags_all": {
              "Name": "Bastion_2_public_vpc_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b922a2fb472e441f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session_manager",
            "aws_iam_role.session_manager",
            "data.aws_iam_policy_document.ec2",
            "module.us-west-2.aws_security_group.ec2_security_group_vpc_2",
            "module.us-west-2.module.keypair.aws_key_pair.generated_key",
            "module.us-west-2.module.keypair.tls_private_key.ec2key",
            "module.us-west-2.module.vpc.aws_subnet.public_subnet_1_vpc_2",
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cd4de4363ab6ee8",
            "arn": "arn:aws:ec2:us-west-2:159184128979:instance/i-0c535a338965a1731",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session_manager",
            "id": "i-0c535a338965a1731",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a953fe99196a683",
            "private_dns": "ip-10-1-2-103.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.103",
            "public_dns": "ec2-35-92-250-122.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.250.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09f9c96fe61cf7354",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b922a2fb472e441f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0332d0b911fb59987",
            "tags": {
              "Name": "webserver_2_private"
            },
            "tags_all": {
              "Name": "webserver_2_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b922a2fb472e441f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session_manager",
            "aws_iam_role.session_manager",
            "data.aws_iam_policy_document.ec2",
            "module.us-west-2.aws_security_group.ec2_security_group_vpc_2",
            "module.us-west-2.module.keypair.aws_key_pair.generated_key",
            "module.us-west-2.module.keypair.tls_private_key.ec2key",
            "module.us-west-2.module.vpc.aws_subnet.private_subnet_1_vcp_2",
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:security-group/sg-016a16309f3bccd4c",
            "description": "Allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016a16309f3bccd4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "159184128979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group"
            },
            "tags_all": {
              "Name": "ec2_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group_vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:security-group/sg-0b922a2fb472e441f",
            "description": "Allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b922a2fb472e441f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_security_group_2",
            "name_prefix": "",
            "owner_id": "159184128979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_security_group_2"
            },
            "tags_all": {
              "Name": "ec2_security_group_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-097075d9ced54ef56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:internet-gateway/igw-0f42ce6dc85fc232a",
            "id": "igw-0f42ce6dc85fc232a",
            "owner_id": "159184128979",
            "tags": {
              "Name": "igw_vpc_1"
            },
            "tags_all": {
              "Name": "igw_vpc_1"
            },
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:internet-gateway/igw-012692fc876fcafb8",
            "id": "igw-012692fc876fcafb8",
            "owner_id": "159184128979",
            "tags": {
              "Name": "igw_vpc_2"
            },
            "tags_all": {
              "Name": "igw_vpc_2"
            },
            "vpc_id": "vpc-097075d9ced54ef56"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private_subnet_vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:route-table/rtb-083424246834e3252",
            "id": "rtb-083424246834e3252",
            "owner_id": "159184128979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_private_subnet_vpc_1"
            },
            "tags_all": {
              "Name": "route_private_subnet_vpc_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private_subnet_vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:route-table/rtb-0b7e61ed60ff8b200",
            "id": "rtb-0b7e61ed60ff8b200",
            "owner_id": "159184128979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_private_subnet_vpc_2"
            },
            "tags_all": {
              "Name": "route_private_subnet_vpc_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-097075d9ced54ef56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public_subnet_vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:route-table/rtb-0399b6d3f0dfa216b",
            "id": "rtb-0399b6d3f0dfa216b",
            "owner_id": "159184128979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f42ce6dc85fc232a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_public_subnet_vpc_1"
            },
            "tags_all": {
              "Name": "route_public_subnet_vpc_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-west-2.module.vpc.aws_internet_gateway.igw_vpc_1",
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public_subnet_vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:route-table/rtb-0dc0d247669d51e2c",
            "id": "rtb-0dc0d247669d51e2c",
            "owner_id": "159184128979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012692fc876fcafb8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_public_subnet_vpc_2"
            },
            "tags_all": {
              "Name": "route_public_subnet_vpc_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-097075d9ced54ef56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-west-2.module.vpc.aws_internet_gateway.igw_vpc_2",
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_1_association",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028ba97b249362cde",
            "route_table_id": "rtb-083424246834e3252",
            "subnet_id": "subnet-04c128ae2628f52b3"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_route_table.route_private_subnet_vpc_1",
            "module.us-west-2.module.vpc.aws_subnet.private_subnet_1_vpc_1",
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_1_association_vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0566ecf589d34c0ba",
            "route_table_id": "rtb-0b7e61ed60ff8b200",
            "subnet_id": "subnet-0332d0b911fb59987"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_route_table.route_private_subnet_vpc_2",
            "module.us-west-2.module.vpc.aws_subnet.private_subnet_1_vcp_2",
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_2_association",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fd084ef4ade72af",
            "route_table_id": "rtb-083424246834e3252",
            "subnet_id": "subnet-076aa60bdb4a0ee34"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_route_table.route_private_subnet_vpc_1",
            "module.us-west-2.module.vpc.aws_subnet.private_subnet_2_vpc_1",
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_1_association",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fea01b9c6e00e34",
            "route_table_id": "rtb-0399b6d3f0dfa216b",
            "subnet_id": "subnet-0e16b54c9c89f01f0"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_internet_gateway.igw_vpc_1",
            "module.us-west-2.module.vpc.aws_route_table.route_public_subnet_vpc_1",
            "module.us-west-2.module.vpc.aws_subnet.public_sebnet_1_vpc_1",
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_1_association_vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cfd77eeae306488",
            "route_table_id": "rtb-0dc0d247669d51e2c",
            "subnet_id": "subnet-07eccd7e52b74aac3"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_internet_gateway.igw_vpc_2",
            "module.us-west-2.module.vpc.aws_route_table.route_public_subnet_vpc_2",
            "module.us-west-2.module.vpc.aws_subnet.public_subnet_1_vpc_2",
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_2_association",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a6577155a5e651b",
            "route_table_id": "rtb-0399b6d3f0dfa216b",
            "subnet_id": "subnet-04219823be4578d26"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_internet_gateway.igw_vpc_1",
            "module.us-west-2.module.vpc.aws_route_table.route_public_subnet_vpc_1",
            "module.us-west-2.module.vpc.aws_subnet.public_subnet_2_vpc_1",
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1_vcp_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:subnet/subnet-0332d0b911fb59987",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0332d0b911fb59987",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1_vpc_2"
            },
            "tags_all": {
              "Name": "private_subnet_1_vpc_2"
            },
            "vpc_id": "vpc-097075d9ced54ef56"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1_vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:subnet/subnet-04c128ae2628f52b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c128ae2628f52b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1_vpc_1"
            },
            "tags_all": {
              "Name": "private_subnet_1_vpc_1"
            },
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2_vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:subnet/subnet-076aa60bdb4a0ee34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076aa60bdb4a0ee34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2_vpc_1"
            },
            "tags_all": {
              "Name": "private_subnet_2_vpc_1"
            },
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sebnet_1_vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:subnet/subnet-0e16b54c9c89f01f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e16b54c9c89f01f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sebnet_1_vpc_1"
            },
            "tags_all": {
              "Name": "public_sebnet_1_vpc_1"
            },
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1_vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:subnet/subnet-07eccd7e52b74aac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eccd7e52b74aac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1_vpc_2"
            },
            "tags_all": {
              "Name": "public_subnet_1_vpc_2"
            },
            "vpc_id": "vpc-097075d9ced54ef56"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2_vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:subnet/subnet-04219823be4578d26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04219823be4578d26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "159184128979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2_vpc_1"
            },
            "tags_all": {
              "Name": "public_subnet_2_vpc_1"
            },
            "vpc_id": "vpc-0d89cff1e72ecf2ce"
          },
          "dependencies": [
            "module.us-west-2.module.vpc.aws_vpc.vpc_1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:vpc/vpc-0d89cff1e72ecf2ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0172bba84c01d6736",
            "default_route_table_id": "rtb-0203e10eb369d9ebf",
            "default_security_group_id": "sg-042934d594952f4fb",
            "dhcp_options_id": "dopt-0a104df655c24d9c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d89cff1e72ecf2ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0203e10eb369d9ebf",
            "owner_id": "159184128979",
            "tags": {
              "Name": "vpc_1"
            },
            "tags_all": {
              "Name": "vpc_1"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.us-west-2.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_2",
      "provider": "module.us-west-2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:159184128979:vpc/vpc-097075d9ced54ef56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-086d0c44d80a5354e",
            "default_route_table_id": "rtb-0503ba3da47819744",
            "default_security_group_id": "sg-0ff8c8b79e6a9e7b3",
            "dhcp_options_id": "dopt-0a104df655c24d9c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097075d9ced54ef56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0503ba3da47819744",
            "owner_id": "159184128979",
            "tags": {
              "Name": "vpc_2"
            },
            "tags_all": {
              "Name": "vpc_2"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}